UPDATE(services): add duration in formats
